get all the travel stop data to actually display left aligned

--- a/app/assets/stylesheets/locations.scss
+++ b/app/assets/stylesheets/locations.scss
@@ -37,7 +37,7 @@
 //TODO: place-card-open and place-card-closed, depending on state. Gonna use a hook for this 
 .place-card-collapsed {
     border-bottom: 2px solid gray;
-    padding: 1rem;
+    padding: .2rem;
     border-top: 2px solid gray;
     margin:.2rem;
     display: flex;
@@ -46,7 +46,7 @@
 
 .place-card-expanded {
     border-bottom: 2px solid gray;
-    padding: 1rem;
+    padding: .2rem;
     border-top: 2px solid gray;
     margin:.2rem;
     display: flex;
@@ -54,5 +54,11 @@
 
 .place-card-data {
     margin: .2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    text-align: left;
 }
 
